--- a/app/src/main/res/layout/fragment_track_progress_fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_admin.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/grey"
+    android:layoutDirection="ltr">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -201,6 +208,8 @@
         android:layout_marginHorizontal="25dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
+        android:layout_weight="2"
+        android:layoutDirection="rtl"
         app:layout_constraintVertical_bias="0.0">
 
 
@@ -208,17 +217,24 @@
             android:id="@+id/radio_true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:text="True"
+            android:layout_gravity="center"
+            android:text="نعم"
+            android:layout_weight="1"
+            android:layout_marginRight="50dp"
             android:textSize="18dp" />
 
         <RadioButton
             android:id="@+id/radio_false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="135dp"
-            android:text="False"
+
+            android:layout_weight="1"
+            android:layout_marginRight="20dp"
+            android:layout_gravity="center_horizontal"
+            android:text="لا"
             android:textSize="18dp" />
     </RadioGroup>
 
 </LinearLayout>
+
+</ScrollView>
