--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -8,6 +8,25 @@
     android:layout_height="match_parent"
     android:background="@color/grey"
     >
+    <!--<include-->
+        <!--layout="@layout/toolbar"-->
+        <!--android:id="@+id/app_bar"-->
+        <!--&gt;</include>-->
+    <!---->
+    <!--<android.support.design.widget.TabLayout-->
+        <!--android:id="@+id/tablayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/scifitRed"-->
+        <!--app:tabGravity="center"-->
+        <!--app:tabIndicatorColor="@color/md_white_1000"-->
+        <!--app:tabTextColor="@color/scifitBlue"-->
+        <!--app:tabMode="scrollable" />-->
+
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/viewpager" />-->
     <RelativeLayout
         android:id="@+id/relative"
         android:layout_width="match_parent"
