--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -6,7 +6,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.AddMealsFragment"
     android:background="#ffffff">
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/scifitRed"
+        app:tabGravity="center"
+        app:tabIndicatorColor="@color/md_white_1000"
+        app:tabTextColor="@color/scifitBlue"
+        app:tabMode="scrollable" />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayoutWeek"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tablayout"
+        android:background="@color/md_light_green_100"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        app:tabIndicatorColor="@color/blackGrey"
+        app:tabTextColor="@color/scifitBlue" />
+
+    <Button
+        android:id="@+id/btn_addMonth"
+        android:layout_width="35dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:text="+"
+        android:fontFamily="@font/cairo"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentRight="true" />
+
+
+    <!--<include-->
+    <!--layout="@layout/toolbar"-->
+    <!--android:id="@+id/app_bar"-->
+    <!--&gt;</include>-->
+
+
+    <Button
+        android:id="@+id/btn_removeMonth"
+        android:layout_width="35dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:fontFamily="@font/cairo"
+        android:text="-"
+        android:layout_alignParentLeft="true" />
+
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/viewpager"
+        android:layout_below="@+id/tablayoutWeek"/>
+
     <ScrollView
+        android:layout_marginTop="95dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
