--- a/app/src/main/res/layout/fragment_diet_fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_diet_fragment_admin.xml
@@ -18,6 +18,17 @@
         app:tabTextColor="@color/scifitBlue"
         app:tabMode="scrollable" />
 
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayoutWeek"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tablayout"
+        android:background="@color/md_light_green_100"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        app:tabIndicatorColor="@color/blackGrey"
+        app:tabTextColor="@color/scifitBlue" />
+
     <Button
         android:id="@+id/btn_addMonth"
         android:layout_width="35dp"
@@ -51,5 +62,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/viewpager"
-        android:layout_below="@+id/tablayout"/>
+        android:layout_below="@+id/tablayoutWeek"/>
 </RelativeLayout>
