--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -221,6 +221,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout9" />
 
+    <TextView
+        android:id="@+id/picPicker"
+        android:layout_width="119dp"
+        android:layout_height="105dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="132dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout9" />
 
     <Button
         android:id="@+id/btnSave"
