--- a/app/src/main/res/layout/activity_inside_exercise.xml
+++ b/app/src/main/res/layout/activity_inside_exercise.xml
@@ -220,7 +220,7 @@
             android:layout_marginLeft="104dp"
             android:layout_marginStart="104dp"
             android:layout_marginTop="4dp"
-            android:text="RM1"
+            android:text="1RM"
             android:textColor="@color/md_white_1000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txtRepsShow3"
