--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -482,96 +482,179 @@
                 app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">
 
 
-
                 <Spinner
-                    android:id="@+id/selectMeal2"
+                    android:id="@+id/selectMealName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:spinnerMode="dropdown"
-                    android:layout_alignParentLeft="true" />
+                    android:spinnerMode="dropdown" />
             </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/relaSpinner5"
+            <!--<RelativeLayout-->
+                <!--android:id="@+id/relaSpinner5"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="48dp"-->
+                <!--android:layout_marginEnd="30dp"-->
+                <!--android:layout_marginLeft="30dp"-->
+                <!--android:layout_marginRight="30dp"-->
+                <!--android:layout_marginStart="30dp"-->
+                <!--android:layout_marginTop="12dp"-->
+                <!--android:background="@drawable/custom_spinner_white"-->
+                <!--app:layout_constraintEnd_toEndOf="parent"-->
+                <!--app:layout_constraintStart_toStartOf="parent"-->
+
+                <!--app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">-->
+
+
+
+                <!--<Spinner-->
+                    <!--android:id="@+id/selectMeal3"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_alignParentStart="true"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:gravity="center"-->
+                    <!--android:spinnerMode="dropdown"-->
+                    <!--android:layout_alignParentLeft="true" />-->
+            <!--</RelativeLayout>-->
+            <!--<RelativeLayout-->
+                <!--android:id="@+id/relaSpinner6"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="48dp"-->
+                <!--android:layout_marginEnd="30dp"-->
+                <!--android:layout_marginLeft="30dp"-->
+                <!--android:layout_marginRight="30dp"-->
+                <!--android:layout_marginStart="30dp"-->
+                <!--android:layout_marginTop="12dp"-->
+                <!--android:background="@drawable/custom_spinner_white"-->
+                <!--app:layout_constraintEnd_toEndOf="parent"-->
+                <!--app:layout_constraintStart_toStartOf="parent"-->
+
+                <!--app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">-->
+
+
+                <!--<Spinner-->
+                    <!--android:id="@+id/selectMeal4"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_alignParentStart="true"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:gravity="center"-->
+                    <!--android:spinnerMode="dropdown"-->
+                    <!--android:layout_alignParentLeft="true" />-->
+            <!--</RelativeLayout>-->
+            <!--<RelativeLayout-->
+                <!--android:id="@+id/relaSpinner7"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="48dp"-->
+                <!--android:layout_marginEnd="30dp"-->
+                <!--android:layout_marginLeft="30dp"-->
+                <!--android:layout_marginRight="30dp"-->
+                <!--android:layout_marginStart="30dp"-->
+                <!--android:layout_marginTop="12dp"-->
+                <!--android:background="@drawable/custom_spinner_white"-->
+                <!--app:layout_constraintEnd_toEndOf="parent"-->
+                <!--app:layout_constraintStart_toStartOf="parent"-->
+
+                <!--app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">-->
+
+
+                <!--<Spinner-->
+                    <!--android:id="@+id/selectMeal5"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_alignParentStart="true"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:gravity="center"-->
+                    <!--android:spinnerMode="dropdown"-->
+                    <!--android:layout_alignParentLeft="true" />-->
+            <!--</RelativeLayout>-->
+
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/custom_spinner_white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-
-                app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">
-
-
-
-                <Spinner
-                    android:id="@+id/selectMeal3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentStart="true"
+                android:id="@+id/cardViewMeals"
+                android:layout_height="210dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="10dp"
+                android:layout_marginVertical="15dp"
+                android:layout_marginHorizontal="30dp"
+                app:contentPaddingLeft="10dp"
+                app:cardMaxElevation="15dp">
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    android:spinnerMode="dropdown"
-                    android:layout_alignParentLeft="true" />
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/relaSpinner6"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/custom_spinner_white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                    android:id="@+id/progressBar"/>
 
-                app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">
-
-
-                <Spinner
-                    android:id="@+id/selectMeal4"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentStart="true"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:spinnerMode="dropdown"
-                    android:layout_alignParentLeft="true" />
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/relaSpinner7"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/custom_spinner_white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-
-                app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">
+                    android:layout_height="match_parent">
 
 
-                <Spinner
-                    android:id="@+id/selectMeal5"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentStart="true"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:spinnerMode="dropdown"
-                    android:layout_alignParentLeft="true" />
-            </RelativeLayout>
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_width="match_parent"
+                        android:src="@drawable/ic_meal"
+                        android:layout_height="170dp"
+                        android:scaleType="fitCenter" />
+
+                    <ImageView
+                        android:layout_width="26dp"
+                        android:layout_height="27dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="53dp"
+                        android:paddingBottom="3dp"
+                        android:src="@drawable/icons_meal_px"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="53dp" />
+
+                    <ImageView
+                        android:layout_width="26dp"
+                        android:layout_height="27dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="113dp"
+                        android:paddingBottom="3dp"
+                        android:src="@drawable/calories"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="113dp" />
+
+                    <TextView
+                        android:id="@+id/textViewShortDesc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="50dp"
+                        android:gravity="center_vertical"
+                        android:text="Card Title"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="50dp" />
+
+                    <TextView
+                        android:id="@+id/textViewTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="29dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="87dp"
+                        android:gravity="center_vertical"
+                        android:text="Card Title"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="87dp" />
+
+
+                </RelativeLayout>
+
+
+            </android.support.v7.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
