--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -656,6 +656,121 @@
 
             </android.support.v7.widget.CardView>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+
+                <RelativeLayout
+                    android:id="@+id/rl_meals"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginHorizontal="25dp"
+                    android:background="@drawable/table_diet_under">
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginEnd="58dp"
+                        android:layout_marginRight="60dp"
+                        android:layout_centerVertical="true"
+                        android:text="نوع الغذاء"
+                        android:textColor="#ffffff" />
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="77dp"
+                        android:text="الكمية"
+                        android:textColor="#ffffff"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="77dp" />
+
+                    <TextView
+                        android:id="@+id/textView20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="44dp"
+                        android:text="(غرام)"
+                        android:layout_marginVertical="3dp"
+                        android:textColor="@color/grey"
+
+                        android:textSize="12sp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="44dp" />
+                </RelativeLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_mealIngr"
+                    android:layout_below="@+id/rl_meals"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </android.support.v7.widget.RecyclerView>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="15dp">
+
+                <RelativeLayout
+                    android:id="@+id/rl_mealsDet"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginHorizontal="25dp"
+                    android:background="@drawable/table_diet_under">
+
+                    <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginEnd="55dp"
+                        android:layout_centerVertical="true"
+                        android:text="العناصر الغذائية"
+                        android:textColor="#ffffff"
+                        android:layout_marginRight="55dp" />
+
+                    <TextView
+                        android:id="@+id/totalcals"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginStart="40dp"
+                        android:layout_centerVertical="true"
+                        android:text="الكمية (غرام)"
+                        android:textColor="#ffffff" />
+                </RelativeLayout>
+
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_mealDet"
+                    android:layout_below="@+id/rl_mealsDet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </android.support.v7.widget.RecyclerView>
+
+            </RelativeLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
