--- a/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey">
+    android:background="@color/grey"
+    android:id="@+id/scrollView">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -180,6 +185,8 @@
 
         </RelativeLayout>
 
+
+
         <Button
             android:id="@+id/btnUpdateWeight"
             android:layout_marginHorizontal="25dp"
@@ -190,6 +197,23 @@
             android:textColor="@color/md_white_1000"
             android:text="تحديث الوزن الحالي" />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="23dp"
+            android:layout_below="@id/btnUpdateWeight"
+            android:layout_height="400dp">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/myRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="15dp"
+                />
+        </RelativeLayout>
+        
+
     </LinearLayout>
+
+    </RelativeLayout>
 </ScrollView>
 
