--- a/app/src/main/res/layout/their_message.xml
+++ b/app/src/main/res/layout/their_message.xml
@@ -9,6 +9,7 @@ android:clipToPadding="false">
 
 <View
     android:id="@+id/avatar"
+    android:layout_marginTop="50dp"
     android:layout_alignParentLeft="true"
     android:scaleType="centerInside"
     android:background="@drawable/circle"
@@ -31,7 +32,6 @@ android:clipToPadding="false">
         android:layout_height="46dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_toRightOf="@+id/text_message_name"
         android:background="@drawable/date_chat"
         android:elevation="2dp"
         android:gravity="center"
@@ -44,22 +44,24 @@ android:clipToPadding="false">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/text_message_body"
-    android:layout_below="@+id/tv_date"
+    android:layout_below="@+id/text_message_name"
     android:layout_alignLeft="@+id/text_message_name"
     android:background="@drawable/their_message"
+    android:layout_marginRight="15dp"
     android:paddingVertical="12dp"
     android:paddingHorizontal="16dp"
     android:elevation="2dp"
     android:textSize="18dp"
     android:text="How are you doing? This is a long message that should probably wrap."
     />
+
     <TextView
         android:id="@+id/text_message_time"
-        android:text="11:40"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:layout_marginLeft="4dp"
+        android:layout_below="@+id/text_message_body"
+        android:layout_marginLeft="-28dp"
         android:layout_toRightOf="@+id/text_message_body"
-        android:layout_below="@+id/text_message_body"/>
+        android:text="11:40"
+        android:textSize="10sp" />
 </RelativeLayout>
